--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "postcss": "^8.4.35",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
+    "svelte-dnd-action": "^0.9.40",
     "tailwindcss": "^3.4.1",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
