--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "type": "module",
   "dependencies": {
     "mathjs": "^12.4.0",
+    "odex": "^3.0.0-rc.4",
     "svelte-mathquill": "^0.7.0"
   }
 }
