messed around with some latex class concepts

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "mathjs": "^12.4.0",
     "odex": "^3.0.0-rc.4",
-    "svelte-mathquill": "^0.7.0"
+    "svelte-mathquill": "^0.7.0",
+    "uuid": "^9.0.1"
   }
 }
