--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "type": "module",
   "dependencies": {
+    "@vercel/analytics": "^1.2.2",
+    "@vercel/speed-insights": "^1.0.10",
     "mathjs": "^12.4.0",
     "odex": "^3.0.0-rc.4",
     "svelte-mathquill": "^0.7.0",
