--- a/package.json
+++ b/package.json
@@ -1,35 +1,35 @@
 {
-  "name": "sedmos",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
-  },
-  "devDependencies": {
-    "@sveltejs/adapter-auto": "^3.0.0",
-    "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
-    "autoprefixer": "^10.4.18",
-    "postcss": "^8.4.35",
-    "svelte": "^4.2.7",
-    "svelte-check": "^3.6.0",
-    "svelte-dnd-action": "^0.9.40",
-    "tailwindcss": "^3.4.1",
-    "tslib": "^2.4.1",
-    "typescript": "^5.0.0",
-    "vite": "^5.0.3"
-  },
-  "type": "module",
-  "dependencies": {
-    "@vercel/analytics": "^1.2.2",
-    "@vercel/speed-insights": "^1.0.10",
-    "mathjs": "^12.4.0",
-    "odex": "^3.0.0-rc.4",
-    "svelte-mathquill": "^0.7.0",
-    "uuid": "^9.0.1"
-  }
+	"name": "sedmos",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "vite dev --host",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"autoprefixer": "^10.4.18",
+		"postcss": "^8.4.35",
+		"svelte": "^4.2.7",
+		"svelte-check": "^3.6.0",
+		"svelte-dnd-action": "^0.9.40",
+		"tailwindcss": "^3.4.1",
+		"tslib": "^2.4.1",
+		"typescript": "^5.0.0",
+		"vite": "^5.0.3"
+	},
+	"type": "module",
+	"dependencies": {
+		"@vercel/analytics": "^1.2.2",
+		"@vercel/speed-insights": "^1.0.10",
+		"mathjs": "^12.4.0",
+		"odex": "^3.0.0-rc.4",
+		"svelte-mathquill": "^0.7.0",
+		"uuid": "^9.0.1"
+	}
 }
